--- a/estilos/style.css
+++ b/estilos/style.css
@@ -67,7 +67,7 @@ header > p {
     font-size: 1.2em;
     color: white;
     max-width: 500px;
-    margin-bottom: 20px;
+    padding-bottom: 40px;
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
